Add in a proper text domain

--- a/style.css
+++ b/style.css
@@ -4,5 +4,6 @@ Theme URI: https://alley.com/
 Author: Alley
 Author URI: https://alley.com/
 Description: A block-based theme for Create Wordpress Project.
+Text Domain: create-wordpress-theme
 Version: 1.0
 */
