create page template

--- a/templates/front-page.html
+++ b/templates/front-page.html
@@ -7,8 +7,11 @@ wp:template-part {
 
 <!--
 wp:group {
-    "className": "site-main",
-    "tagName": "main"
+	"tagName": "main",
+	"className": "site-main",
+	"layout": {
+		"type": "default"
+	}
 }
 -->
 <main id="main" class="wp-block-group site-main">
