--- a/templates/404.html
+++ b/templates/404.html
@@ -67,7 +67,7 @@ wp:group {
 		-->
 		<div class="wp-block-group entry-content">
 			<!-- wp:paragraph -->
-			<p>We're sorry, page you're looking for could not be found. Please
+			<p>We're sorry, the page you're looking for could not be found. Please
 			use your browser's 'Back' button or use one of the navigation links
 			on this page.</p>
 			<!-- /wp:paragraph -->
