Add block names to common groups in templates

--- a/templates/front-page.html
+++ b/templates/front-page.html
@@ -11,6 +11,9 @@ wp:group {
 	"className": "site-main",
 	"layout": {
 		"type": "default"
+	},
+	"metadata":{
+		"name":"Site Main"
 	}
 }
 -->
@@ -21,7 +24,7 @@ wp:group {
 		"className": "screen-reader-text"
 	}
 	/-->
-	
+
 	<!--
 	wp:post-content {
 		"layout": {
