--- a/templates/single.html
+++ b/templates/single.html
@@ -11,6 +11,9 @@ wp:group {
 	"className": "site-main",
 	"layout": {
 		"type": "default"
+	},
+	"metadata":{
+		"name":"Site Main"
 	}
 }
 -->
@@ -20,6 +23,9 @@ wp:group {
 		"tagName": "article",
 		"layout": {
 			"type": "default"
+		},
+		"metadata":{
+			"name":"Article"
 		}
 	}
 	-->
@@ -30,13 +36,16 @@ wp:group {
 			"className": "entry-header",
 			"layout": {
 				"type": "constrained"
+			},
+			"metadata":{
+				"name":"Entry Header"
 			}
 		}
 		-->
 		<header class="wp-block-group entry-header">
 			<!-- wp:post-featured-image {"align":"wide"} /-->
 
-			<!-- 
+			<!--
 				@todo Replace with Primary Category.
 				@see https://github.com/alleyinteractive/create-wordpress-project/issues/53
 			-->
@@ -49,7 +58,7 @@ wp:group {
 			}
 			/-->
 
-			<!-- 
+			<!--
 				@todo Replace with Subheadline.
 				@see https://github.com/alleyinteractive/create-wordpress-project/issues/52
 			-->
@@ -61,12 +70,15 @@ wp:group {
 					"type": "flex",
 					"flexWrap": "wrap",
 					"justifyContent": "left"
+				},
+				"metadata":{
+					"name":"Entry Header Meta"
 				}
 			}
 			-->
 			<div class="wp-block-group">
-				
-				<!-- 
+
+				<!--
 					@todo Replace with Byline.
 					@see https://github.com/alleyinteractive/byline-manager/issues/74
 				-->
@@ -96,11 +108,14 @@ wp:group {
 			"className": "entry-aside",
 			"layout": {
 				"type": "constrained"
+			},
+			"metadata":{
+				"name":"Entry Aside"
 			}
 		}
 		-->
 		<aside class="wp-block-group entry-aside">
-			<!-- 
+			<!--
 				@todo Related Content.
 				@see https://github.com/alleyinteractive/create-wordpress-project/issues/54
 			-->
